Fix it so that the call to checkForFinalResults() only trigger if one of the players actually has a score of 5, then have the scoreboard reset to 0.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,12 @@
         ++tieTally;
         scoreBoard.textContent = `Wins: ${winTally}     Losses: ${loseTally}     Ties: ${tieTally}`;
     }
-    checkForFinalResults();
+    if (winTally === 5 || loseTally === 5) {
+      checkForFinalResults();
+      winTally = 0;
+      loseTally = 0;
+      tieTally = 0;
+    }
   }
 
   function checkForFinalResults() {  
